修复卡券号不能删除和多余空格，弹出框适配

--- a/BuyVegetablesTreasure/FS/Main/我的/礼品卡/Controller/FSGetGiftCardViewController.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/礼品卡/Controller/FSGetGiftCardViewController.xib
@@ -42,7 +42,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="alphabet"/>
                         </textField>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pMo-hI-JX3">
                             <rect key="frame" x="0.0" y="48" width="320" height="0.5"/>
