--- a/BuyVegetablesTreasure/FS/Main/入口/Login/Controller/FSLoginViewController.xib
+++ b/BuyVegetablesTreasure/FS/Main/入口/Login/Controller/FSLoginViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,13 +16,19 @@
                 <outlet property="firstSeparatorLine" destination="eHs-ej-VHe" id="sWz-Cz-NFG"/>
                 <outlet property="forgetPasswordButton" destination="H9H-3z-tnx" id="mMb-vU-P7g"/>
                 <outlet property="loginButton" destination="ReL-iy-SDF" id="GTd-gO-yUu"/>
+                <outlet property="otherLoginIconImageView" destination="75e-7Z-qqs" id="BOe-Vg-PY3"/>
+                <outlet property="otherLoginLabel" destination="IOW-oH-zIa" id="70F-uI-ZZF"/>
                 <outlet property="passwordIconImageView" destination="qbj-mx-pMS" id="guQ-i9-Eno"/>
                 <outlet property="passwordInputTextField" destination="U1M-G5-Ne5" id="OD1-A1-CU4"/>
                 <outlet property="phoneLoginButton" destination="uyk-zP-Qsf" id="P2P-fB-joq"/>
                 <outlet property="phoneNumberInputTextField" destination="tUF-vP-3vv" id="bcX-4V-sku"/>
                 <outlet property="registerButton" destination="kxY-Ta-TCM" id="LIf-OD-0Bc"/>
                 <outlet property="secondSeparatorLine" destination="62E-aw-Nej" id="fqC-0u-LdN"/>
+                <outlet property="thirdSeparatorLine" destination="O5T-u8-TwC" id="S09-8z-y6v"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weiChatIconImageView" destination="PXe-Qv-Z2b" id="YnA-Az-2SF"/>
+                <outlet property="weiChatLabel" destination="sdk-mG-LOi" id="Usc-Ff-8DK"/>
+                <outlet property="weiChatLoginButton" destination="O2i-UL-aLN" id="NjU-ja-mVI"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,7 +41,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tUF-vP-3vv" customClass="XFLimitedTextField">
-                    <rect key="frame" x="141" y="101" width="218" height="30"/>
+                    <rect key="frame" x="62" y="180" width="283" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -45,7 +51,7 @@
                     </connections>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U1M-G5-Ne5">
-                    <rect key="frame" x="149" y="149" width="210" height="30"/>
+                    <rect key="frame" x="62" y="244" width="283" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -55,7 +61,7 @@
                     </connections>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ReL-iy-SDF">
-                    <rect key="frame" x="16" y="227" width="343" height="30"/>
+                    <rect key="frame" x="30" y="343" width="315" height="44"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="登录"/>
                     <connections>
@@ -63,7 +69,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kxY-Ta-TCM">
-                    <rect key="frame" x="16" y="265" width="343" height="30"/>
+                    <rect key="frame" x="30" y="402" width="315" height="44"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="注册"/>
                     <connections>
@@ -71,7 +77,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H9H-3z-tnx">
-                    <rect key="frame" x="297" y="318" width="62" height="30"/>
+                    <rect key="frame" x="283" y="461" width="62" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="忘记密码">
                         <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -81,7 +87,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uyk-zP-Qsf">
-                    <rect key="frame" x="54" y="318" width="62" height="30"/>
+                    <rect key="frame" x="30" y="461" width="62" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <state key="normal" title="快速登录">
@@ -92,23 +98,57 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="手机" translatesAutoresizingMaskIntoConstraints="NO" id="Tal-fG-1vl">
-                    <rect key="frame" x="16" y="81" width="17" height="30"/>
+                    <rect key="frame" x="30" y="180" width="17" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="密码锁" translatesAutoresizingMaskIntoConstraints="NO" id="qbj-mx-pMS">
-                    <rect key="frame" x="16" y="149" width="21" height="26"/>
+                    <rect key="frame" x="30" y="246" width="21" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eHs-ej-VHe">
-                    <rect key="frame" x="-63" y="140" width="422" height="1"/>
+                    <rect key="frame" x="30" y="215" width="315" height="1"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="62E-aw-Nej">
-                    <rect key="frame" x="-63" y="207" width="422" height="1"/>
+                    <rect key="frame" x="30" y="277" width="315" height="1"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O5T-u8-TwC">
+                    <rect key="frame" x="53" y="544" width="290" height="1"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="FSOtherLogin" translatesAutoresizingMaskIntoConstraints="NO" id="75e-7Z-qqs">
+                    <rect key="frame" x="163" y="529" width="29" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="其他方式登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOW-oH-zIa">
+                    <rect key="frame" x="53" y="576" width="237" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="FSWeiChat" translatesAutoresizingMaskIntoConstraints="NO" id="PXe-Qv-Z2b">
+                    <rect key="frame" x="156" y="605" width="36" height="36"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="微信" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdk-mG-LOi">
+                    <rect key="frame" x="156" y="637" width="42" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2i-UL-aLN">
+                    <rect key="frame" x="137" y="599" width="70" height="70"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <connections>
+                        <action selector="weiChatLoginButtonAction:" destination="-1" eventType="touchUpInside" id="fjc-nU-kYI"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -116,6 +156,8 @@
         </view>
     </objects>
     <resources>
+        <image name="FSOtherLogin" width="29" height="30"/>
+        <image name="FSWeiChat" width="36" height="36"/>
         <image name="bgLOGO" width="375" height="398"/>
         <image name="密码锁" width="21" height="26"/>
         <image name="手机" width="17" height="30"/>
