--- a/BuyVegetablesTreasure/FS/Main/我的/MyQRCode/Controller/FSMyQRCodeViewController.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/MyQRCode/Controller/FSMyQRCodeViewController.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,16 +20,14 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Eh-7m-qxa">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Eh-7m-qxa">
                     <rect key="frame" x="0.0" y="79" width="375" height="375"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="5Eh-7m-qxa" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="width" id="5s6-2r-3qg"/>
-                <constraint firstItem="5Eh-7m-qxa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="79" id="eTz-K7-IXU"/>
-                <constraint firstAttribute="trailing" secondItem="5Eh-7m-qxa" secondAttribute="trailing" id="pPQ-YL-X1r"/>
-                <constraint firstItem="5Eh-7m-qxa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rIW-Hq-CZ1"/>
+                <constraint firstItem="5Eh-7m-qxa" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="4i6-nP-13k"/>
+                <constraint firstItem="5Eh-7m-qxa" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="yJL-bS-eD6"/>
             </constraints>
         </view>
     </objects>
