--- a/BuyVegetablesTreasure/FS/Main/搜索/搜索结果页/View/FSSearchResultTVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/搜索/搜索结果页/View/FSSearchResultTVCell.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="134.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XqI-5v-cat">
@@ -26,7 +25,7 @@
                         <rect key="frame" x="179" y="105" width="63" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                        <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.94509803921568625" green="0.51372549019607838" blue="0.086274509803921567" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2YU-df-SCS">
@@ -66,9 +65,14 @@
                             <action selector="plusButtonTouchUpInside:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DIN-r9-0uW"/>
                         </connections>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Goods补货图章" translatesAutoresizingMaskIntoConstraints="NO" id="o4I-75-wvI">
+                        <rect key="frame" x="290" y="37" width="67" height="56"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="addGoodsImage" destination="o4I-75-wvI" id="Nln-FB-JS7"/>
                 <outlet property="countLabel" destination="2YU-df-SCS" id="OF5-Br-SwD"/>
                 <outlet property="descLabel" destination="7nS-u8-gXF" id="T0j-Ow-F6B"/>
                 <outlet property="iconImageView" destination="XqI-5v-cat" id="kil-K1-HcL"/>
@@ -77,9 +81,11 @@
                 <outlet property="priceLabel" destination="yPu-c7-3iP" id="kRx-Q0-dSL"/>
                 <outlet property="titleLabel" destination="W42-Zw-oEQ" id="nFQ-xJ-Meq"/>
             </connections>
+            <point key="canvasLocation" x="24.5" y="51.5"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="Goods补货图章" width="67" height="56"/>
         <image name="减" width="18" height="18"/>
         <image name="加" width="18" height="18"/>
     </resources>
